[gd_scene load_steps=17 format=3 uid="uid://d2k3qwp7esmrd"]

[ext_resource type="Script" uid="uid://wpknemba467p" path="res://scripts/monkey.gd" id="1_aubuo"]
[ext_resource type="SpriteFrames" uid="uid://cwc6wayi47sck" path="res://assets/monkey/spriteframes/monkey_6.tres" id="2_wpyu8"]
[ext_resource type="Texture2D" uid="uid://harf0jdyh4in" path="res://assets/monkey/crosshair.png" id="4_2l80e"]
[ext_resource type="Texture2D" uid="uid://cieqo40eb3heb" path="res://assets/ui/CooldownIndicator.png" id="4_gsqvd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yqeq"]
size = Vector2(13.5, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_gsqvd"]
radius = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_x11h5"]
atlas = ExtResource("4_gsqvd")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_nandu"]
atlas = ExtResource("4_gsqvd")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_irmjr"]
atlas = ExtResource("4_gsqvd")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0hpa"]
atlas = ExtResource("4_gsqvd")
region = Rect2(27, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q8wh"]
atlas = ExtResource("4_gsqvd")
region = Rect2(36, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl0m1"]
atlas = ExtResource("4_gsqvd")
region = Rect2(45, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_mae1k"]
atlas = ExtResource("4_gsqvd")
region = Rect2(54, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffw2m"]
atlas = ExtResource("4_gsqvd")
region = Rect2(63, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x6l4"]
atlas = ExtResource("4_gsqvd")
region = Rect2(72, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpyu8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x11h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nandu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irmjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0hpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q8wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl0m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mae1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffw2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x6l4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Monkey" type="CharacterBody2D"]
z_index = 2
collision_layer = 128
collision_mask = 15
motion_mode = 1
script = ExtResource("1_aubuo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 5
scale = Vector2(3, 3)
sprite_frames = ExtResource("2_wpyu8")
animation = &"down_left"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_0yqeq")

[node name="Crosshair" type="Sprite2D" parent="."]
visible = false
z_index = 3
texture_filter = 1
position = Vector2(0, -30)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_2l80e")
region_enabled = true
region_rect = Rect2(3.95963, 20.0398, 4.08021, 3.97988)

[node name="CrosshairWallCheck" type="ShapeCast2D" parent="Crosshair"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_gsqvd")
target_position = Vector2(0, 0)
collision_mask = 32

[node name="RockTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="JumpTimer" type="Timer" parent="."]

[node name="CooldownProgress" type="AnimatedSprite2D" parent="."]
texture_filter = 3
position = Vector2(15.75, 51.75)
scale = Vector2(5.16667, 4.94444)
sprite_frames = SubResource("SpriteFrames_wpyu8")
frame = 8
frame_progress = 0.999301
